[package]
name = "rust-course"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [
    "runtime-async-std-native-tls",
    "postgres",
] }
async-std = { version = "1", features = ["attributes"] }
async-trait = "0.1.51"
thiserror = "1.0.30"